Fix issues with displaying toppings, add spacing to photos

--- a/code/form_style.css
+++ b/code/form_style.css
@@ -66,7 +66,7 @@ label {
 	grid-row-gap: 15px;
 	grid-column-gap: 15px;
 	grid-template-columns: 150px 150px 150px;
-	margin-bottom: 20px;
+	margin: 20px 0;
 }
 
 body {
